<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".HeaderFooterGridViewActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/gird_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/headerfootergridview_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <am.widget.headerfootergridview.HeaderFooterGridView
            android:id="@+id/gird_hfg_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnWidth="64dp"
            android:gravity="center"
            android:horizontalSpacing="10dip"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/grid_cb_hv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headerfootergridview_header_view"/>

                <CheckBox
                    android:id="@+id/grid_cb_hi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headerfootergridview_header_item"/>

                <CheckBox
                    android:id="@+id/grid_cb_fi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headerfootergridview_footer_item"/>

                <CheckBox
                    android:id="@+id/grid_cb_fv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headerfootergridview_footer_view"/>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/headerfootergridview_item_number" />

            <SeekBar
                android:id="@+id/grid_sb_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:max="50" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
